<resources>
    <string name="app_name">MyMediaRy</string>
    <string name="title_activity_main">ProfileActivity</string>

    <!-- WoofActivity -->
    <string name="title_activity_woof">WoofActivity</string>
    <string name="dog_name_1">Koda</string>
    <string name="dog_name_2">Lola</string>
    <string name="dog_name_3">Frankie</string>
    <string name="dog_name_4">Nox</string>
    <string name="dog_name_5">Faye</string>
    <string name="dog_name_6">Bella</string>
    <string name="dog_name_7">Moana</string>
    <string name="dog_name_8">Tzeitel</string>
    <string name="dog_name_9">Leroy</string>
    <string name="dog_description_1">Eating treats on the terrace</string>
    <string name="dog_description_2">Barking at Daddy</string>
    <string name="dog_description_3">Stealing socks</string>
    <string name="dog_description_4">Meeting new animals</string>
    <string name="dog_description_5">Digging in the garden</string>
    <string name="dog_description_6">Chasing sea foam</string>
    <string name="dog_description_7">Bothering her paw-rents</string>
    <string name="dog_description_8">Sunbathing</string>
    <string name="dog_description_9">Sleeping in dangerous places</string>
    <string name="about">About:</string>
    <string name="years_old">%d years old</string>
    <string name="expand_button_content_description">See more or less information about a dog.</string>

    <!-- UnscrambleActivity -->
    <string name="title_activity_unscramble">UnscrambleActivity</string>
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="score">Score: %d</string>
    <string name="word_count">%d/10</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="wrong_guess">Wrong Guess!</string>

    <!-- CupcakeActivity -->
    <string name="title_activity_cupcake">CupcakeActivity</string>
    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="one_cupcake">One Cupcake</string>
    <string name="six_cupcakes">Six Cupcakes</string>
    <string name="twelve_cupcakes">Twelve Cupcakes</string>
    <string name="choose_flavor">Choose Flavor</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s \nFlavor: %2$s \nPickup date: %3$s \nTotal: %4$s \n\nThank you!</string>
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>

    <!-- Profile -->
    <string name="back_button">Revenir en arrière</string>
    <string name="add_profile">Ajouter un profil</string>
    <string name="create_profile">Créer le profil</string>
    <string name="profile_name">Nom du profil</string>
    <string name="used_name">Il y a déjà un profil avec ce nom</string>
    <string name="mandatory_name">Veuillez donner un nom de profil</string>
    <string name="choose_avatar">Choisir un avatar</string>
    <string name="choose_the_avatar">Choisir l\'avatar</string>
    <string name="password">Mot de passe</string>
    <string name="password_confirmation">Retaper le mot de passe</string>
    <string name="no_password">Pas de mot de passe</string>
    <string name="show_password">Montrer le mot de passe</string>
    <string name="hide_password">Cacher le mot de passe</string>
    <string name="incorrect_password">Mot de passe incorrecte</string>
    <string name="not_matching_password">Mots de passe non correspondants</string>
    <string name="login">Se connecter</string>

    <!-- Avatar descriptions -->
    <string name="avatar_primary">Personnage dans un cercle blanc sur un fond violet</string>
    <string name="avatar_primary_inversed">Personnage dans un cercle violet sur un fond blanc</string>
    <string name="avatar_secondary">Personnage dans un cercle blanc sur un fond vert</string>
    <string name="avatar_secondary_inversed">Personnage dans un cercle vert sur un fond blanc</string>
    <string name="avatar_tertiary">Personnage dans un cercle blanc sur un fond doré</string>
    <string name="avatar_tertiary_inversed">Personnage dans un cercle doré sur un fond blanc</string>
    <string name="multimedia_primary">Un livre, une note de musique et une manette blanches sur un fond violet</string>
    <string name="multimedia_primary_inversed">Un livre, une note de musique et une manette violettes sur un fond blanc</string>
    <string name="multimedia_secondary">Un livre, une note de musique et une manette blanches sur un fond vert</string>
    <string name="multimedia_secondary_inversed">Un livre, une note de musique et une manette vertes sur un fond blanc</string>
    <string name="multimedia_tertiary">Un livre, une note de musique et une manette blanches sur un fond doré</string>
    <string name="multimedia_tertiary_inversed">Un livre, une note de musique et une manette dorées sur un fond blanc</string>
    <string name="book_primary">Un livre blanc sur un fond violet</string>
    <string name="book_primary_inversed">Un livre violet sur un fond blanc</string>
    <string name="book_secondary">Un livre blanc sur un fond vert</string>
    <string name="book_secondary_inversed">Un livre vert sur un fond blanc</string>
    <string name="book_tertiary">Un livre blanc sur un fond doré</string>
    <string name="book_tertiary_inversed">Un livre doré sur un fond blanc</string>
    <string name="music_primary">Note de musique blanche sur un fond violet</string>
    <string name="music_primary_inversed">Note de musique violette sur un fond blanc</string>
    <string name="music_secondary">Note de musique blanche sur un fond vert</string>
    <string name="music_secondary_inversed">Note de musique verte sur un fond blanc</string>
    <string name="music_tertiary">Note de musique blanche sur un fond doré</string>
    <string name="music_tertiary_inversed">Note de musique dorée sur un fond blanc</string>
    <string name="videogames_primary">Manette de console blanche sur un fond violet</string>
    <string name="videogames_primary_inversed">Manette de console violette sur un fond blanc</string>
    <string name="videogames_secondary">Manette de console blanche sur un fond vert</string>
    <string name="videogames_secondary_inversed">Manette de console verte sur un fond blanc</string>
    <string name="videogames_tertiary">Manette de console blanche sur un fond doré</string>
    <string name="videogames_tertiary_inversed">Manette de console dorée sur un fond blanc</string>
</resources>
